...
            endDate = null

        )
    ) {}
}

internal const val TAG_NOTHING_TO_SHOW = "tag_nothing_to_show"
internal const val TAG_PROGRESS_INDICATOR = "tag_progress_indicator"
internal const val TAG_LIST = "tag_list"
